[JBRes-1799] Adds a benchmark headless mode